<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/instructions_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/step_one"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/step_two"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/step_three"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/step_four"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="10dp"
                android:paddingEnd="50dp"
                android:text="@string/on_github"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/github_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/title"
            android:textColor="?colorOnPrimary"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/instructions_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/instructions"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/instructions_container"
            app:layout_constraintStart_toStartOf="@+id/instructions_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>